version/0.15/_sources/examples/simulator/mechanics-simulator-leftventricle_pr.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples\simulator\mechanics-simulator-leftventricle_pr.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_simulator_mechanics-simulator-leftventricle_pr.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_simulator_mechanics-simulator-leftventricle_pr.py:


Run a left ventricle mechanical simulation
------------------------------------------
This example shows you how to perform the following actions:

- Generate a left-ventricle model from a labeled surface.
- Set up the model for mechanical simulation:

  - Generate fibers.
  - Assign material.
  - Tune boundary conditions.
  - Compute stress-free configuration.
  - Run the simulation for one heartbeat.

- Postprocess the results:

  - Plot the stress-free configuration versus the end-diastole configuration.
  - Plot the Klotz curve.
  - Animate the simulation results.
  - Plot the PV loop.

.. GENERATED FROM PYTHON SOURCE LINES 47-56

.. warning::
   When using a standalone version of the DPF Server, you must accept the `license terms
   <https://dpf.docs.pyansys.com/version/stable/getting_started/licensing.html>`_. To
   accept these terms, you can set this environment variable:

   .. code-block:: python

       import os
       os.environ["ANSYS_DPF_ACCEPT_LA"] = "Y"

.. GENERATED FROM PYTHON SOURCE LINES 58-62

Perform the required imports
~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Import the required modules and set relevant paths, including that of the working
directory, heart model, and LS-DYNA executable file.

.. GENERATED FROM PYTHON SOURCE LINES 62-81

.. code-block:: Python


    import copy
    import glob
    import json
    import os
    from pathlib import Path
    import time

    import matplotlib.pyplot as plt
    from pint import Quantity
    import pyvista as pv

    from ansys.health.heart.examples import get_input_leftventricle
    import ansys.health.heart.models as models
    from ansys.health.heart.post.dpf_utils import ICVoutReader
    from ansys.health.heart.settings.material.material import ACTIVE, ANISO, ISO, HGOFiber, Mat295
    from ansys.health.heart.settings.settings import FibersDRBM
    from ansys.health.heart.simulator import DynaSettings, MechanicsSimulator








.. GENERATED FROM PYTHON SOURCE LINES 82-84

Get the model input surface and part definitions
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. GENERATED FROM PYTHON SOURCE LINES 84-97

.. code-block:: Python

    path_to_surface, path_to_part_definitions = get_input_leftventricle()

    # Plot the input surface.
    surface = pv.read(path_to_surface)
    surface.plot()

    # Load and print the parts defined in the JSON file.
    with open(path_to_part_definitions, "r") as f:
        part_definitions = json.load(f)

    # Print the part definitions using indentation for better readability.
    print(json.dumps(part_definitions, indent=4))








.. tab-set::



   .. tab-item:: Static Scene



            
     .. image-sg:: /examples/simulator/images/sphx_glr_mechanics-simulator-leftventricle_pr_001.png
        :alt: mechanics simulator leftventricle pr
        :srcset: /examples/simulator/images/sphx_glr_mechanics-simulator-leftventricle_pr_001.png
        :class: sphx-glr-single-img
     


   .. tab-item:: Interactive Scene



       .. offlineviewer:: C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\doc\source\examples\simulator\images\sphx_glr_mechanics-simulator-leftventricle_pr_001.vtksz



.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    {
        "Left ventricle": {
            "id": 1,
            "enclosed_by_boundaries": {
                "left-ventricle-endocardium": 1,
                "left-ventricle-epicardium": 2,
                "interface_left-ventricle-myocardium_mitral-valve-plane": 3,
                "interface_left-ventricle-myocardium_aortic-valve-plane": 4
            }
        }
    }




.. GENERATED FROM PYTHON SOURCE LINES 98-101

Load the input surface and mesh the model.
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Set the working directory.

.. GENERATED FROM PYTHON SOURCE LINES 101-120

.. code-block:: Python

    workdir = (
        Path.home() / "pyansys-heart" / "downloads" / "Rodero2021" / "01" / "LeftVentricle-simulation"
    )

    # Initialize a left ventricle model.
    model: models.LeftVentricle = models.LeftVentricle(working_directory=workdir)

    # Load the input surface.
    model.load_input(surface, part_definitions, scalar="surface-id")

    # Mesh the volume.
    model.mesh_volume(use_wrapper=True, global_mesh_size=4.0, _global_wrap_size=4.0)

    # Update the model.
    model.update()

    # Plot the mesh.
    model.plot_mesh()








.. tab-set::



   .. tab-item:: Static Scene



            
     .. image-sg:: /examples/simulator/images/sphx_glr_mechanics-simulator-leftventricle_pr_002.png
        :alt: mechanics simulator leftventricle pr
        :srcset: /examples/simulator/images/sphx_glr_mechanics-simulator-leftventricle_pr_002.png
        :class: sphx-glr-single-img
     


   .. tab-item:: Interactive Scene



       .. offlineviewer:: C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\doc\source\examples\simulator\images\sphx_glr_mechanics-simulator-leftventricle_pr_002.vtksz






.. GENERATED FROM PYTHON SOURCE LINES 121-124

.. note::
   This mesh is very coarse for and for demonstration purposes. In practice, the mesh size should
   be smaller.

.. GENERATED FROM PYTHON SOURCE LINES 126-129

Instantiate the simulator
~~~~~~~~~~~~~~~~~~~~~~~~~
Instantiate the simulator and define settings.

.. GENERATED FROM PYTHON SOURCE LINES 129-145

.. code-block:: Python


    # Specify the LS-DYNA path.
    lsdyna_path = r"ls-dyna_mpp"

    # Instantiate LS-DYNA settings.
    dyna_settings = DynaSettings(
        lsdyna_path=lsdyna_path, dynatype="intelmpi", num_cpus=2, platform="windows"
    )

    # Instantiate the simulator, modifying options as necessary.
    simulator = MechanicsSimulator(
        model=model,
        dyna_settings=dyna_settings,
        simulation_directory=os.path.join(workdir, "simulation-mechanics"),
    )








.. GENERATED FROM PYTHON SOURCE LINES 146-149

Load simulation settings
~~~~~~~~~~~~~~~~~~~~~~~~
Load the default settings.

.. GENERATED FROM PYTHON SOURCE LINES 149-151

.. code-block:: Python

    simulator.settings.load_defaults()








.. GENERATED FROM PYTHON SOURCE LINES 152-155

Compute fiber orientation
~~~~~~~~~~~~~~~~~~~~~~~~~
Compute fiber orientation and plot the fibers.

.. GENERATED FROM PYTHON SOURCE LINES 155-167

.. code-block:: Python


    # Use default rotation angles for the D-RBM method.
    fiber_settings = FibersDRBM()

    # Print settings
    print(fiber_settings)

    simulator.compute_fibers(fiber_settings=fiber_settings)

    # Plot the fiber orientation by streamlines.
    simulator.model.plot_fibers(n_seed_points=2000)








.. tab-set::



   .. tab-item:: Static Scene



            
     .. image-sg:: /examples/simulator/images/sphx_glr_mechanics-simulator-leftventricle_pr_003.png
        :alt: mechanics simulator leftventricle pr
        :srcset: /examples/simulator/images/sphx_glr_mechanics-simulator-leftventricle_pr_003.png
        :class: sphx-glr-single-img
     


   .. tab-item:: Interactive Scene



       .. offlineviewer:: C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\doc\source\examples\simulator\images\sphx_glr_mechanics-simulator-leftventricle_pr_003.vtksz



.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    left_ventricle=BaseFiberSettings:
      alpha_endo: 60 degree
      alpha_epi: -60 degree
      beta_endo: -20 degree
      beta_epi: 20 degree
     right_ventricle=BaseFiberSettings:
      alpha_endo: -90 degree
      alpha_epi: 25 degree
      beta_endo: 0 degree
      beta_epi: 20 degree
     alpha_outflow_tract=None beta_outflow_tract=None septal_fraction=0.6666666666666666

    <pyvista.plotting.plotter.Plotter object at 0x000002DFD1AA83D0>



.. GENERATED FROM PYTHON SOURCE LINES 168-175

.. note::
   The D-RBM method is based on Doste et al. (2021) and in this implementation
   the rotation of the local coordinate system follows the right hand rule, where
   the transmural direction is pointing from endocardium to epicardium, the
   longitudinal direction is pointing from apex to base. Consequently, the
   circumferential direction is orthogonal to both and follows from the cross
   product of longtiduinal and transmural directions.

.. GENERATED FROM PYTHON SOURCE LINES 179-181

Assign a material to the left ventricle.
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. GENERATED FROM PYTHON SOURCE LINES 181-198

.. code-block:: Python


    # Define a material for the myocardium.
    myocardium = Mat295(
        rho=0.001,
        iso=ISO(itype=-3, beta=2, kappa=1.0, k1=0.20e-3, k2=6.55),
        aniso=ANISO(
            atype=-1,
            fibers=[HGOFiber(k1=0.00305, k2=29.05), HGOFiber(k1=1.25e-3, k2=36.65)],
            k1fs=0.15e-3,
            k2fs=6.28,
        ),
        active=ACTIVE(),  # This uses the default active model
    )

    # Assign the material to the left ventricle.
    simulator.model.left_ventricle.meca_material = myocardium








.. GENERATED FROM PYTHON SOURCE LINES 199-201

Compute the stress-free configuration
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. GENERATED FROM PYTHON SOURCE LINES 201-225

.. code-block:: Python


    # Create a stiff region at the base of the ventricle
    simulator.compute_uhc()
    stiff_part = simulator.model.create_stiff_ventricle_base(threshold_left_ventricle=0.9)

    # Compute the stress-free configuration and estimate initial stress.
    report, stress_free_coord, guess_ed_coord = simulator.compute_stress_free_configuration()

    # Copy the mesh to a new variable for plotting.
    zerop = copy.deepcopy(simulator.model.mesh)

    # Update the points of the mesh with the stress-free coordinates.
    zerop.points = stress_free_coord

    # Plot the original and stress-free meshes.
    plotter = pv.Plotter()
    plotter.add_mesh(zerop, color="red", opacity=0.3, label="stress-free shape")
    plotter.add_mesh(simulator.model.mesh, color="grey", opacity=0.2, label="end-of-diastole")
    plotter.add_legend()
    plotter.show()

    # Print the stress free report in readable format.
    print(json.dumps(report, indent=4))








.. tab-set::



   .. tab-item:: Static Scene



            
     .. image-sg:: /examples/simulator/images/sphx_glr_mechanics-simulator-leftventricle_pr_004.png
        :alt: mechanics simulator leftventricle pr
        :srcset: /examples/simulator/images/sphx_glr_mechanics-simulator-leftventricle_pr_004.png
        :class: sphx-glr-single-img
     


   .. tab-item:: Interactive Scene



       .. offlineviewer:: C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\doc\source\examples\simulator\images\sphx_glr_mechanics-simulator-leftventricle_pr_004.vtksz


.. image-sg:: /examples/simulator/images/sphx_glr_mechanics-simulator-leftventricle_pr_005.png
   :alt: EDVPR
   :srcset: /examples/simulator/images/sphx_glr_mechanics-simulator-leftventricle_pr_005.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    {
        "Simulation output time (ms)": [
            0.0,
            100.0,
            200.23744201660156,
            359.10308837890625,
            438.535888671875,
            538.535888671875,
            638.535888671875,
            738.535888671875,
            838.535888671875,
            938.535888671875,
            1000.0
        ],
        "Convergence": {
            "max_error (mm)": 1.924527255376361,
            "mean_error (mm)": 0.4060854230610127
        },
        "Cavity volumes": {
            "Left ventricle cavity": {
                "imposed cavity pressure (mmHg)": 15.0,
                "true end diastolic volume (mm3)": 118054.64901809898,
                "simulated volumes (mm3)": [
                    72659.23137523768,
                    87354.01388737251,
                    95058.82012224807,
                    102948.00005145691,
                    105505.3364099243,
                    108383.91384702452,
                    110890.84576402743,
                    112744.88480812253,
                    114545.10067542456,
                    116186.47885091158,
                    117051.09552213587
                ],
                "volume error (%)": 0.8500753712877916
            }
        }
    }




.. GENERATED FROM PYTHON SOURCE LINES 226-229

.. note::
   The input geometry is assumed to be at the end-of-diastole with a
   ventricular pressure of 15 mmHg. You can modify this pressure in the settings.

.. GENERATED FROM PYTHON SOURCE LINES 231-233

Run the main simulation
~~~~~~~~~~~~~~~~~~~~~~~

.. GENERATED FROM PYTHON SOURCE LINES 233-241

.. code-block:: Python


    # Tune the boundary conditions at the valve regions: in this model there are
    # springs in radial and normal direction of the valve region which constrain the model.
    simulator.settings.mechanics.boundary_conditions.valve["stiffness"] = Quantity(0.02, "MPa/mm")

    # Start the mechanical simulation.
    simulator.simulate()





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\.tox\doc-html\Lib\site-packages\pydantic\main.py:464: UserWarning: Pydantic serializer warnings:
      PydanticSerializationUnexpectedValue(Expected `int` - serialized value may not be as expected [field_name='acid', input_value=np.int64(2), input_type=int64])
      return self.__pydantic_serializer__.to_python(




.. GENERATED FROM PYTHON SOURCE LINES 242-246

.. note::
   By default, the simulation is coupled to an open-loop circulation model with
   a constant preload and a Windkessel-type afterload. Moreover, the simulation
   is set to run for a single heartbeat.

.. GENERATED FROM PYTHON SOURCE LINES 248-250

Postprocessing
~~~~~~~~~~~~~~

.. GENERATED FROM PYTHON SOURCE LINES 250-299

.. code-block:: Python


    # Plot pressure-volume loop
    # ~~~~~~~~~~~~~~~~~~~~~~~~~

    # Read the LS-DYNA binout file that contains cavity volumes and pressure.
    icvout = ICVoutReader(os.path.join(workdir, "simulation-mechanics", "main-mechanics", "binout0000"))
    pressure = icvout.get_pressure(1)
    volume = icvout.get_volume(1)

    # Convert to mL and mmHg and plot the pressure and volume curves.
    plt.plot(volume / 1000, pressure * 7500, label="Left ventricle")
    plt.xlabel("Volume (mL)")
    plt.ylabel("Pressure (mmHg)")
    plt.title("Pressure-volume loop")
    plt.show()

    # Plot the displacement field
    # ~~~~~~~~~~~~~~~~~~~~~~~~~~~
    mesh_folder = os.path.join(workdir, "simulation-mechanics", "main-mechanics", "post", "vtks")
    mesh_files = sorted(glob.glob(f"{mesh_folder}/*.vtu"))
    mesh_list = []
    for mesh_file in mesh_files:
        mesh = pv.read(mesh_file)
        mesh.set_active_vectors("displacement")
        mesh_list.append(mesh)

    # Create a PyVista plotter
    plotter = pv.Plotter()

    if mesh_files:
        actor = plotter.add_mesh(mesh_list[0])

    plotter.show(interactive_update=True)


    # Animate the meshes over time
    # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    # Use a function for animation.
    def animate():
        for m in mesh_list:
            plotter.clear()
            plotter.add_mesh(m, show_edges=True, opacity=0.5, scalars=None)
            plotter.update()
            plotter.render()
            time.sleep(0.1)  # Control animation speed


    # Animate the model.
    animate()







.. tab-set::



   .. tab-item:: Static Scene



            
     .. image-sg:: /examples/simulator/images/sphx_glr_mechanics-simulator-leftventricle_pr_006.png
        :alt: mechanics simulator leftventricle pr
        :srcset: /examples/simulator/images/sphx_glr_mechanics-simulator-leftventricle_pr_006.png
        :class: sphx-glr-single-img
     


   .. tab-item:: Interactive Scene



       .. offlineviewer:: C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\doc\source\examples\simulator\images\sphx_glr_mechanics-simulator-leftventricle_pr_006.vtksz


.. image-sg:: /examples/simulator/images/sphx_glr_mechanics-simulator-leftventricle_pr_007.png
   :alt: Pressure-volume loop
   :srcset: /examples/simulator/images/sphx_glr_mechanics-simulator-leftventricle_pr_007.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    ERROR:root:Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey
    C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\.tox\doc-html\Lib\site-packages\pyvista\core\utilities\fileio.py:295: UserWarning: The VTK reader `vtkXMLUnstructuredGridReader` in pyvista reader `XMLUnstructuredGridReader('C:\Users\ansys\pyansys-heart\downloads\Rodero2021\01\LeftVentricle-simulation\simulation-mechanics\main-mechanics\post\vtks\heart_0.vtu')` raised an errorwhile reading the file.
            "Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey"
      warnings.warn(
    ERROR:root:Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey
    C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\.tox\doc-html\Lib\site-packages\pyvista\core\utilities\fileio.py:295: UserWarning: The VTK reader `vtkXMLUnstructuredGridReader` in pyvista reader `XMLUnstructuredGridReader('C:\Users\ansys\pyansys-heart\downloads\Rodero2021\01\LeftVentricle-simulation\simulation-mechanics\main-mechanics\post\vtks\heart_1.vtu')` raised an errorwhile reading the file.
            "Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey"
      warnings.warn(
    ERROR:root:Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey
    C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\.tox\doc-html\Lib\site-packages\pyvista\core\utilities\fileio.py:295: UserWarning: The VTK reader `vtkXMLUnstructuredGridReader` in pyvista reader `XMLUnstructuredGridReader('C:\Users\ansys\pyansys-heart\downloads\Rodero2021\01\LeftVentricle-simulation\simulation-mechanics\main-mechanics\post\vtks\heart_10.vtu')` raised an errorwhile reading the file.
            "Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey"
      warnings.warn(
    ERROR:root:Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey
    C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\.tox\doc-html\Lib\site-packages\pyvista\core\utilities\fileio.py:295: UserWarning: The VTK reader `vtkXMLUnstructuredGridReader` in pyvista reader `XMLUnstructuredGridReader('C:\Users\ansys\pyansys-heart\downloads\Rodero2021\01\LeftVentricle-simulation\simulation-mechanics\main-mechanics\post\vtks\heart_11.vtu')` raised an errorwhile reading the file.
            "Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey"
      warnings.warn(
    ERROR:root:Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey
    C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\.tox\doc-html\Lib\site-packages\pyvista\core\utilities\fileio.py:295: UserWarning: The VTK reader `vtkXMLUnstructuredGridReader` in pyvista reader `XMLUnstructuredGridReader('C:\Users\ansys\pyansys-heart\downloads\Rodero2021\01\LeftVentricle-simulation\simulation-mechanics\main-mechanics\post\vtks\heart_12.vtu')` raised an errorwhile reading the file.
            "Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey"
      warnings.warn(
    ERROR:root:Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey
    C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\.tox\doc-html\Lib\site-packages\pyvista\core\utilities\fileio.py:295: UserWarning: The VTK reader `vtkXMLUnstructuredGridReader` in pyvista reader `XMLUnstructuredGridReader('C:\Users\ansys\pyansys-heart\downloads\Rodero2021\01\LeftVentricle-simulation\simulation-mechanics\main-mechanics\post\vtks\heart_13.vtu')` raised an errorwhile reading the file.
            "Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey"
      warnings.warn(
    ERROR:root:Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey
    C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\.tox\doc-html\Lib\site-packages\pyvista\core\utilities\fileio.py:295: UserWarning: The VTK reader `vtkXMLUnstructuredGridReader` in pyvista reader `XMLUnstructuredGridReader('C:\Users\ansys\pyansys-heart\downloads\Rodero2021\01\LeftVentricle-simulation\simulation-mechanics\main-mechanics\post\vtks\heart_14.vtu')` raised an errorwhile reading the file.
            "Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey"
      warnings.warn(
    ERROR:root:Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey
    C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\.tox\doc-html\Lib\site-packages\pyvista\core\utilities\fileio.py:295: UserWarning: The VTK reader `vtkXMLUnstructuredGridReader` in pyvista reader `XMLUnstructuredGridReader('C:\Users\ansys\pyansys-heart\downloads\Rodero2021\01\LeftVentricle-simulation\simulation-mechanics\main-mechanics\post\vtks\heart_15.vtu')` raised an errorwhile reading the file.
            "Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey"
      warnings.warn(
    ERROR:root:Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey
    C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\.tox\doc-html\Lib\site-packages\pyvista\core\utilities\fileio.py:295: UserWarning: The VTK reader `vtkXMLUnstructuredGridReader` in pyvista reader `XMLUnstructuredGridReader('C:\Users\ansys\pyansys-heart\downloads\Rodero2021\01\LeftVentricle-simulation\simulation-mechanics\main-mechanics\post\vtks\heart_16.vtu')` raised an errorwhile reading the file.
            "Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey"
      warnings.warn(
    ERROR:root:Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey
    C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\.tox\doc-html\Lib\site-packages\pyvista\core\utilities\fileio.py:295: UserWarning: The VTK reader `vtkXMLUnstructuredGridReader` in pyvista reader `XMLUnstructuredGridReader('C:\Users\ansys\pyansys-heart\downloads\Rodero2021\01\LeftVentricle-simulation\simulation-mechanics\main-mechanics\post\vtks\heart_17.vtu')` raised an errorwhile reading the file.
            "Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey"
      warnings.warn(
    ERROR:root:Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey
    C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\.tox\doc-html\Lib\site-packages\pyvista\core\utilities\fileio.py:295: UserWarning: The VTK reader `vtkXMLUnstructuredGridReader` in pyvista reader `XMLUnstructuredGridReader('C:\Users\ansys\pyansys-heart\downloads\Rodero2021\01\LeftVentricle-simulation\simulation-mechanics\main-mechanics\post\vtks\heart_18.vtu')` raised an errorwhile reading the file.
            "Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey"
      warnings.warn(
    ERROR:root:Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey
    C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\.tox\doc-html\Lib\site-packages\pyvista\core\utilities\fileio.py:295: UserWarning: The VTK reader `vtkXMLUnstructuredGridReader` in pyvista reader `XMLUnstructuredGridReader('C:\Users\ansys\pyansys-heart\downloads\Rodero2021\01\LeftVentricle-simulation\simulation-mechanics\main-mechanics\post\vtks\heart_19.vtu')` raised an errorwhile reading the file.
            "Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey"
      warnings.warn(
    ERROR:root:Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey
    C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\.tox\doc-html\Lib\site-packages\pyvista\core\utilities\fileio.py:295: UserWarning: The VTK reader `vtkXMLUnstructuredGridReader` in pyvista reader `XMLUnstructuredGridReader('C:\Users\ansys\pyansys-heart\downloads\Rodero2021\01\LeftVentricle-simulation\simulation-mechanics\main-mechanics\post\vtks\heart_2.vtu')` raised an errorwhile reading the file.
            "Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey"
      warnings.warn(
    ERROR:root:Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey
    C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\.tox\doc-html\Lib\site-packages\pyvista\core\utilities\fileio.py:295: UserWarning: The VTK reader `vtkXMLUnstructuredGridReader` in pyvista reader `XMLUnstructuredGridReader('C:\Users\ansys\pyansys-heart\downloads\Rodero2021\01\LeftVentricle-simulation\simulation-mechanics\main-mechanics\post\vtks\heart_20.vtu')` raised an errorwhile reading the file.
            "Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey"
      warnings.warn(
    ERROR:root:Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey
    C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\.tox\doc-html\Lib\site-packages\pyvista\core\utilities\fileio.py:295: UserWarning: The VTK reader `vtkXMLUnstructuredGridReader` in pyvista reader `XMLUnstructuredGridReader('C:\Users\ansys\pyansys-heart\downloads\Rodero2021\01\LeftVentricle-simulation\simulation-mechanics\main-mechanics\post\vtks\heart_21.vtu')` raised an errorwhile reading the file.
            "Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey"
      warnings.warn(
    ERROR:root:Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey
    C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\.tox\doc-html\Lib\site-packages\pyvista\core\utilities\fileio.py:295: UserWarning: The VTK reader `vtkXMLUnstructuredGridReader` in pyvista reader `XMLUnstructuredGridReader('C:\Users\ansys\pyansys-heart\downloads\Rodero2021\01\LeftVentricle-simulation\simulation-mechanics\main-mechanics\post\vtks\heart_22.vtu')` raised an errorwhile reading the file.
            "Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey"
      warnings.warn(
    ERROR:root:Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey
    C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\.tox\doc-html\Lib\site-packages\pyvista\core\utilities\fileio.py:295: UserWarning: The VTK reader `vtkXMLUnstructuredGridReader` in pyvista reader `XMLUnstructuredGridReader('C:\Users\ansys\pyansys-heart\downloads\Rodero2021\01\LeftVentricle-simulation\simulation-mechanics\main-mechanics\post\vtks\heart_23.vtu')` raised an errorwhile reading the file.
            "Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey"
      warnings.warn(
    ERROR:root:Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey
    C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\.tox\doc-html\Lib\site-packages\pyvista\core\utilities\fileio.py:295: UserWarning: The VTK reader `vtkXMLUnstructuredGridReader` in pyvista reader `XMLUnstructuredGridReader('C:\Users\ansys\pyansys-heart\downloads\Rodero2021\01\LeftVentricle-simulation\simulation-mechanics\main-mechanics\post\vtks\heart_24.vtu')` raised an errorwhile reading the file.
            "Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey"
      warnings.warn(
    ERROR:root:Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey
    C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\.tox\doc-html\Lib\site-packages\pyvista\core\utilities\fileio.py:295: UserWarning: The VTK reader `vtkXMLUnstructuredGridReader` in pyvista reader `XMLUnstructuredGridReader('C:\Users\ansys\pyansys-heart\downloads\Rodero2021\01\LeftVentricle-simulation\simulation-mechanics\main-mechanics\post\vtks\heart_25.vtu')` raised an errorwhile reading the file.
            "Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey"
      warnings.warn(
    ERROR:root:Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey
    C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\.tox\doc-html\Lib\site-packages\pyvista\core\utilities\fileio.py:295: UserWarning: The VTK reader `vtkXMLUnstructuredGridReader` in pyvista reader `XMLUnstructuredGridReader('C:\Users\ansys\pyansys-heart\downloads\Rodero2021\01\LeftVentricle-simulation\simulation-mechanics\main-mechanics\post\vtks\heart_26.vtu')` raised an errorwhile reading the file.
            "Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey"
      warnings.warn(
    ERROR:root:Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey
    C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\.tox\doc-html\Lib\site-packages\pyvista\core\utilities\fileio.py:295: UserWarning: The VTK reader `vtkXMLUnstructuredGridReader` in pyvista reader `XMLUnstructuredGridReader('C:\Users\ansys\pyansys-heart\downloads\Rodero2021\01\LeftVentricle-simulation\simulation-mechanics\main-mechanics\post\vtks\heart_27.vtu')` raised an errorwhile reading the file.
            "Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey"
      warnings.warn(
    ERROR:root:Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey
    C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\.tox\doc-html\Lib\site-packages\pyvista\core\utilities\fileio.py:295: UserWarning: The VTK reader `vtkXMLUnstructuredGridReader` in pyvista reader `XMLUnstructuredGridReader('C:\Users\ansys\pyansys-heart\downloads\Rodero2021\01\LeftVentricle-simulation\simulation-mechanics\main-mechanics\post\vtks\heart_28.vtu')` raised an errorwhile reading the file.
            "Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey"
      warnings.warn(
    ERROR:root:Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey
    C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\.tox\doc-html\Lib\site-packages\pyvista\core\utilities\fileio.py:295: UserWarning: The VTK reader `vtkXMLUnstructuredGridReader` in pyvista reader `XMLUnstructuredGridReader('C:\Users\ansys\pyansys-heart\downloads\Rodero2021\01\LeftVentricle-simulation\simulation-mechanics\main-mechanics\post\vtks\heart_29.vtu')` raised an errorwhile reading the file.
            "Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey"
      warnings.warn(
    ERROR:root:Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey
    C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\.tox\doc-html\Lib\site-packages\pyvista\core\utilities\fileio.py:295: UserWarning: The VTK reader `vtkXMLUnstructuredGridReader` in pyvista reader `XMLUnstructuredGridReader('C:\Users\ansys\pyansys-heart\downloads\Rodero2021\01\LeftVentricle-simulation\simulation-mechanics\main-mechanics\post\vtks\heart_3.vtu')` raised an errorwhile reading the file.
            "Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey"
      warnings.warn(
    ERROR:root:Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey
    C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\.tox\doc-html\Lib\site-packages\pyvista\core\utilities\fileio.py:295: UserWarning: The VTK reader `vtkXMLUnstructuredGridReader` in pyvista reader `XMLUnstructuredGridReader('C:\Users\ansys\pyansys-heart\downloads\Rodero2021\01\LeftVentricle-simulation\simulation-mechanics\main-mechanics\post\vtks\heart_30.vtu')` raised an errorwhile reading the file.
            "Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey"
      warnings.warn(
    ERROR:root:Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey
    C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\.tox\doc-html\Lib\site-packages\pyvista\core\utilities\fileio.py:295: UserWarning: The VTK reader `vtkXMLUnstructuredGridReader` in pyvista reader `XMLUnstructuredGridReader('C:\Users\ansys\pyansys-heart\downloads\Rodero2021\01\LeftVentricle-simulation\simulation-mechanics\main-mechanics\post\vtks\heart_31.vtu')` raised an errorwhile reading the file.
            "Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey"
      warnings.warn(
    ERROR:root:Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey
    C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\.tox\doc-html\Lib\site-packages\pyvista\core\utilities\fileio.py:295: UserWarning: The VTK reader `vtkXMLUnstructuredGridReader` in pyvista reader `XMLUnstructuredGridReader('C:\Users\ansys\pyansys-heart\downloads\Rodero2021\01\LeftVentricle-simulation\simulation-mechanics\main-mechanics\post\vtks\heart_32.vtu')` raised an errorwhile reading the file.
            "Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey"
      warnings.warn(
    ERROR:root:Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey
    C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\.tox\doc-html\Lib\site-packages\pyvista\core\utilities\fileio.py:295: UserWarning: The VTK reader `vtkXMLUnstructuredGridReader` in pyvista reader `XMLUnstructuredGridReader('C:\Users\ansys\pyansys-heart\downloads\Rodero2021\01\LeftVentricle-simulation\simulation-mechanics\main-mechanics\post\vtks\heart_33.vtu')` raised an errorwhile reading the file.
            "Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey"
      warnings.warn(
    ERROR:root:Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey
    C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\.tox\doc-html\Lib\site-packages\pyvista\core\utilities\fileio.py:295: UserWarning: The VTK reader `vtkXMLUnstructuredGridReader` in pyvista reader `XMLUnstructuredGridReader('C:\Users\ansys\pyansys-heart\downloads\Rodero2021\01\LeftVentricle-simulation\simulation-mechanics\main-mechanics\post\vtks\heart_34.vtu')` raised an errorwhile reading the file.
            "Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey"
      warnings.warn(
    ERROR:root:Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey
    C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\.tox\doc-html\Lib\site-packages\pyvista\core\utilities\fileio.py:295: UserWarning: The VTK reader `vtkXMLUnstructuredGridReader` in pyvista reader `XMLUnstructuredGridReader('C:\Users\ansys\pyansys-heart\downloads\Rodero2021\01\LeftVentricle-simulation\simulation-mechanics\main-mechanics\post\vtks\heart_35.vtu')` raised an errorwhile reading the file.
            "Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey"
      warnings.warn(
    ERROR:root:Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey
    C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\.tox\doc-html\Lib\site-packages\pyvista\core\utilities\fileio.py:295: UserWarning: The VTK reader `vtkXMLUnstructuredGridReader` in pyvista reader `XMLUnstructuredGridReader('C:\Users\ansys\pyansys-heart\downloads\Rodero2021\01\LeftVentricle-simulation\simulation-mechanics\main-mechanics\post\vtks\heart_36.vtu')` raised an errorwhile reading the file.
            "Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey"
      warnings.warn(
    ERROR:root:Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey
    C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\.tox\doc-html\Lib\site-packages\pyvista\core\utilities\fileio.py:295: UserWarning: The VTK reader `vtkXMLUnstructuredGridReader` in pyvista reader `XMLUnstructuredGridReader('C:\Users\ansys\pyansys-heart\downloads\Rodero2021\01\LeftVentricle-simulation\simulation-mechanics\main-mechanics\post\vtks\heart_37.vtu')` raised an errorwhile reading the file.
            "Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey"
      warnings.warn(
    ERROR:root:Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey
    C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\.tox\doc-html\Lib\site-packages\pyvista\core\utilities\fileio.py:295: UserWarning: The VTK reader `vtkXMLUnstructuredGridReader` in pyvista reader `XMLUnstructuredGridReader('C:\Users\ansys\pyansys-heart\downloads\Rodero2021\01\LeftVentricle-simulation\simulation-mechanics\main-mechanics\post\vtks\heart_38.vtu')` raised an errorwhile reading the file.
            "Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey"
      warnings.warn(
    ERROR:root:Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey
    C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\.tox\doc-html\Lib\site-packages\pyvista\core\utilities\fileio.py:295: UserWarning: The VTK reader `vtkXMLUnstructuredGridReader` in pyvista reader `XMLUnstructuredGridReader('C:\Users\ansys\pyansys-heart\downloads\Rodero2021\01\LeftVentricle-simulation\simulation-mechanics\main-mechanics\post\vtks\heart_39.vtu')` raised an errorwhile reading the file.
            "Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey"
      warnings.warn(
    ERROR:root:Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey
    C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\.tox\doc-html\Lib\site-packages\pyvista\core\utilities\fileio.py:295: UserWarning: The VTK reader `vtkXMLUnstructuredGridReader` in pyvista reader `XMLUnstructuredGridReader('C:\Users\ansys\pyansys-heart\downloads\Rodero2021\01\LeftVentricle-simulation\simulation-mechanics\main-mechanics\post\vtks\heart_4.vtu')` raised an errorwhile reading the file.
            "Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey"
      warnings.warn(
    ERROR:root:Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey
    C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\.tox\doc-html\Lib\site-packages\pyvista\core\utilities\fileio.py:295: UserWarning: The VTK reader `vtkXMLUnstructuredGridReader` in pyvista reader `XMLUnstructuredGridReader('C:\Users\ansys\pyansys-heart\downloads\Rodero2021\01\LeftVentricle-simulation\simulation-mechanics\main-mechanics\post\vtks\heart_40.vtu')` raised an errorwhile reading the file.
            "Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey"
      warnings.warn(
    ERROR:root:Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey
    C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\.tox\doc-html\Lib\site-packages\pyvista\core\utilities\fileio.py:295: UserWarning: The VTK reader `vtkXMLUnstructuredGridReader` in pyvista reader `XMLUnstructuredGridReader('C:\Users\ansys\pyansys-heart\downloads\Rodero2021\01\LeftVentricle-simulation\simulation-mechanics\main-mechanics\post\vtks\heart_5.vtu')` raised an errorwhile reading the file.
            "Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey"
      warnings.warn(
    ERROR:root:Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey
    C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\.tox\doc-html\Lib\site-packages\pyvista\core\utilities\fileio.py:295: UserWarning: The VTK reader `vtkXMLUnstructuredGridReader` in pyvista reader `XMLUnstructuredGridReader('C:\Users\ansys\pyansys-heart\downloads\Rodero2021\01\LeftVentricle-simulation\simulation-mechanics\main-mechanics\post\vtks\heart_6.vtu')` raised an errorwhile reading the file.
            "Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey"
      warnings.warn(
    ERROR:root:Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey
    C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\.tox\doc-html\Lib\site-packages\pyvista\core\utilities\fileio.py:295: UserWarning: The VTK reader `vtkXMLUnstructuredGridReader` in pyvista reader `XMLUnstructuredGridReader('C:\Users\ansys\pyansys-heart\downloads\Rodero2021\01\LeftVentricle-simulation\simulation-mechanics\main-mechanics\post\vtks\heart_7.vtu')` raised an errorwhile reading the file.
            "Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey"
      warnings.warn(
    ERROR:root:Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey
    C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\.tox\doc-html\Lib\site-packages\pyvista\core\utilities\fileio.py:295: UserWarning: The VTK reader `vtkXMLUnstructuredGridReader` in pyvista reader `XMLUnstructuredGridReader('C:\Users\ansys\pyansys-heart\downloads\Rodero2021\01\LeftVentricle-simulation\simulation-mechanics\main-mechanics\post\vtks\heart_8.vtu')` raised an errorwhile reading the file.
            "Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey"
      warnings.warn(
    ERROR:root:Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey
    C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\.tox\doc-html\Lib\site-packages\pyvista\core\utilities\fileio.py:295: UserWarning: The VTK reader `vtkXMLUnstructuredGridReader` in pyvista reader `XMLUnstructuredGridReader('C:\Users\ansys\pyansys-heart\downloads\Rodero2021\01\LeftVentricle-simulation\simulation-mechanics\main-mechanics\post\vtks\heart_9.vtu')` raised an errorwhile reading the file.
            "Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey"
      warnings.warn(





.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (7 minutes 33.455 seconds)


.. _sphx_glr_download_examples_simulator_mechanics-simulator-leftventricle_pr.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: mechanics-simulator-leftventricle_pr.ipynb <mechanics-simulator-leftventricle_pr.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: mechanics-simulator-leftventricle_pr.py <mechanics-simulator-leftventricle_pr.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: mechanics-simulator-leftventricle_pr.zip <mechanics-simulator-leftventricle_pr.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
